# netbox-mcp-server

./: pyproject.toml  server.py
